2005-10-21  Andreas Kupries <andreask@activestate.com>

	* sak.tcl: Extended benchmark facility. New command for removal of
	  columns from results. New option to explicitly specify a single
	  interpreter to use.

2005-10-18  Andreas Kupries <andreask@activestate.com>

	* sak.tcl: More benchmarking functionality, showing benchmark data
	  after the fact, implicit merging, and changing interp
	  information around. Now we need only some functionality to show
	  the data graphically, and possibly compute statistical
	  information.

2005-10-17  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* installed_modules.tcl: New module "bench". Benchmarking support
	  package.
	* sak.tcl: Added benchmarking functionality.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-10-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sak.tcl: Added support for passing parameters to critcl. v04
	will support -debug and -clean and v034 supports -keep.

2005-09-29  Andreas Kupries <andreask@activestate.com>

	* README-1.8.txt: New file. Readme file for the upcoming release.

	* sak.tcl (pkg-compare): Modified the core of the 'rstatus'
	  functionality to sort by module, then package, and show the
	  module name before the packages. Easier for use in new release
	  README file.

	* installed_modules.tcl: log module changed to use _msg for
	  installation.

	* install_action.tcl (_msg): New action for modules having a
	  message catalogs in a msgs subdirectory.

	* installer.tcl (xcopy): Fixed bug in the interaction of recursion
	  and pattern argument. It is for files, but affected directories
	  as well, causing page to ignore its plugin directory.

2005-09-28  Andreas Kupries <andreask@activestate.com>

	* installed_modules.tcl: Using _tcr to install page and its
	  plugins.

	* install_action.tcl (_tcr): New install action, recursive install
	  of all .tcl files in the module.
